[package]
name = "single-pass-ssz-partial-algo"
version = "0.1.0"
authors = ["Matt Garnett <14004106+c-o-l-o-r@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false

[dependencies]
sha2 = "0.8.0"
hex = "0.3.2"

[features]
default = ["std"]
std = []
